changed home image styling slightly to avoid stretched look on some views

--- a/css/style.css
+++ b/css/style.css
@@ -355,7 +355,6 @@ section.home {
     .home-img {
         position: fixed;
         min-height: 100%;
-        min-width: 100%;
     }
 
     .home-content h1 {
